[gd_scene load_steps=8 format=3 uid="uid://dhvaxn0fiv8ly"]

[ext_resource type="Texture2D" uid="uid://r62e38c7mwd0" path="res://resources/sprites/barry-flying-idle.png" id="1_gubm0"]
[ext_resource type="Script" uid="uid://bjebua3oehjoh" path="res://scenes/barry/barry.gd" id="1_qm3q5"]
[ext_resource type="Texture2D" uid="uid://bnugb888y5you" path="res://resources/sprites/Bullet_Shell.png" id="2_dy014"]
[ext_resource type="AudioStream" uid="uid://ds7nmy7p0jxuv" path="res://resources/audio/sfx/clean-machine-gun-burst-98224.mp3" id="4_2upli"]
[ext_resource type="AudioStream" uid="uid://b5rjbakh03dl3" path="res://resources/audio/sfx/laser-shot-ingame-230500.mp3" id="5_5h6ot"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jmmsx"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 19.85
angle_min = 123.9
angle_max = 720.0
flatness = 0.742
angular_velocity_min = -23.22
angular_velocity_max = 387.1
gravity = Vector3(-100, 500, 0)
tangential_accel_min = 56.9
tangential_accel_max = 56.9
scale_min = 0.03
scale_max = 0.03

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w4hj6"]
radius = 49.9897
height = 99.9794

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_mask = 60
script = ExtResource("1_qm3q5")

[node name="BulletSpawn" type="Marker2D" parent="."]
position = Vector2(71, -4)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(-50, 24)
emitting = false
amount = 40
texture = ExtResource("2_dy014")
lifetime = 5.0
process_material = SubResource("ParticleProcessMaterial_jmmsx")

[node name="BarrySprite" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_gubm0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -5)
rotation = 0.00849494
shape = SubResource("CapsuleShape2D_w4hj6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(453, -4)
limit_top = 0
limit_bottom = 0

[node name="MachineGunAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_2upli")
parameters/looping = true

[node name="LaserAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_5h6ot")
